Add /block/status interface
